# plex_discord_notify

./: pyproject.toml  setup.py
plex_discord_notify/: __init__.py  discord_webhook.py  main.py  plex_webhook.py  utils.py  version.py
src/plex_discord_notify/: __init__.py  discord_webhook.py  main.py  plex_webhook.py  utils.py  version.py
systemd/: plex_discord_notify.service
